[package]
name = "cerberus"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
directories = "5.0.1"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
